# describealign

./: .gitattributes  .gitignore  README.md  build-requirements.txt  describealign.py  describealign.spec  pyproject.toml  requirements.txt
.github/workflows/: build-binary.yaml
Package/: product.plist
Package/scripts/: postinstall
